# trendify

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  alternative_tag_selectors.py  custom_handler.py  dashboard.json  implementation_recommendation.py  improved_tag_selection.py  index.html  mkdocs.yml  objects.inv  prepare_release.sh  publish.sh  pyproject.toml  requirements.txt  run.sh  sample_hierarchical_data.py  search.html  sitemap.xml  test.py  test.sh  test2.sh  update_docs_and_push_changes.sh  versions.json
.github/workflows/: docs.yml  publish.yml  test.yml
1.2.5/: 404.html  index.html  objects.inv  sitemap.xml
1.2.5/api_and_cli/: index.html
1.2.5/example/: index.html
1.2.5/more_examples/: index.html
1.2.5/motivation/: index.html
1.2.5/planned_features/: index.html
1.2.5/recipe/: index.html
1.2.5/reference/SUMMARY/: index.html
1.2.5/reference/trendify/: index.html
1.2.5/search/: search_index.json
1.2.6/: 404.html  index.html  objects.inv  sitemap.xml
1.2.6/api_and_cli/: index.html
1.2.6/example/: index.html
1.2.6/more_examples/: index.html
1.2.6/motivation/: index.html
1.2.6/planned_features/: index.html
1.2.6/recipe/: index.html
1.2.6/reference/SUMMARY/: index.html
1.2.6/reference/trendify/: index.html
1.2.6/search/: search_index.json
1.2.7/: 404.html  index.html  objects.inv  sitemap.xml
1.2.7/api_and_cli/: index.html
1.2.7/example/: index.html
1.2.7/more_examples/: index.html
1.2.7/motivation/: index.html
1.2.7/planned_features/: index.html
1.2.7/recipe/: index.html
1.2.7/reference/SUMMARY/: index.html
1.2.7/reference/trendify/: index.html
1.2.7/search/: search_index.json
api_and_cli/: index.html
benchmarks/: stress_test.py
docs/: api_and_cli.md  example.md  example_generator.py  hooks.py  index.md  motivation.md  recipe.md  redraw_plots.sh  usage.md  user-guide.md
docs/css/: extra.css
docs/example_data/: .gitignore
example/: index.html
examples/: ai_examples.py
examples/example_output/data/: data_products.json
gallery/: gallery.py
gallery/data/: data_products.json
motivation/: index.html
planned_features/: index.html
plotly_examples/: histogram_1.py  sensitivity_1.py
recipe/: index.html
reference/SUMMARY/: index.html
reference/grafana_api/: index.html
reference/grafana_api/dashboard/: index.html
reference/grafana_api/panels/: index.html
reference/grafana_api/transformations/: index.html
reference/trendify/: index.html
reference/trendify/API/: index.html
reference/trendify/CLI/: index.html
reference/trendify/cli/: index.html
reference/trendify/command_line_interface/: index.html
reference/trendify/examples/: index.html
reference/trendify/local_server/: index.html
reference/trendify/products/: index.html
reference/trendify/server/: index.html
reference/trendipy/API/: index.html
reference/trendipy/CLI/: index.html
reference/trendipy/examples/: index.html
reference/trendipy/server/: index.html
rewrite_reference/: OVERVIEW.md  dump_schemas.py  pydantic_schemas.json
sample_data/: .gitignore
sample_data/models/0/: data_product.json  results.csv  stdin.csv
sample_data/models/1/: data_product.json  results.csv  stdin.csv
sample_data/models/2/: data_product.json  results.csv  stdin.csv
sample_data/models/3/: data_product.json  results.csv  stdin.csv
sample_data/models/4/: data_product.json  results.csv  stdin.csv
sample_data/models/5/: data_product.json  results.csv  stdin.csv
sample_data/models/6/: data_product.json  results.csv  stdin.csv
sample_data/models/7/: data_product.json  results.csv  stdin.csv
sample_data/models/8/: data_product.json  results.csv  stdin.csv
sample_data/models/9/: data_product.json  results.csv  stdin.csv
scripts/: gen_ref_pages.py  gen_ts_models.py  matrix_generator.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api_and_cli/: index.html
site/example/: index.html
site/motivation/: index.html
site/planned_features/: index.html
site/recipe/: index.html
site/reference/SUMMARY/: index.html
site/reference/grafana_api/: index.html
site/reference/process_manager/: index.html
site/reference/trendify/: index.html
site/reference/trendipy/: index.html
site/search/: search_index.json
site/usage/: index.html
src/file_manager/: __init__.py  file_manager.py
src/grafana_api/: __init__.py  dashboard.py
src/grafana_api/panels/: xy_chart.py
src/process_manager/inputs/: __init__.py  core.py
src/tests/: test_trendify.py  test_trendify_2.py
src/trendify/: API.py  CLI.py  __init__.py  asset_specs.py  button_panel.json  cli.py  color.py  examples.py  gallery.py  local_server.py  log.py  manager.py  mixins.py  pipeline.py  plotly_dashboard.py  postresql_test.py  production_server.py  products.py  progress.py  server.py  streamlit.py  test.py  typing.py  utils.py
src/trendify/api/: __init__.py  api.py  data_product.py  data_product_collection.py  format2d.py  table.py
src/trendify/assets/: assets.py
src/trendify/base/: __init__.py  data_product.py  helpers.py  pen.py  record.py
src/trendify/database_backends/: file_storage.py
src/trendify/formats/: __init__.py  format2d.py  table.py
src/trendify/generator/: __init__.py  generate.py  histogrammer.py  render.py  table_builder.py  xy_data_plotter.py
src/trendify/plotting/: __init__.py  axline.py  figure.py  histogram.py  point.py  scatter.py  trace.py
src/trendify_old/: API.py  asset_specs.py  examples.py  gallery.py  plotly_dashboard.py  streamlit.py  trendify_file_manager.py
test_output/: product_0.json  product_1.json  product_2.json  product_3.json  product_4.json  table_entry_test.csv
tests/: examples.py  test.sh  test_axline.py  test_cli.py  test_db.py  test_examples.py  test_figure.py  test_generate.py  test_histogram.py  test_hydration.py  test_marker.py  test_pen.py  test_pipeline.py  test_product_store.py  test_record.py  test_record_store.py  test_render.py  test_scatter.py  test_table_builder.py  test_viewer_api.py  unittests.py
usage/: index.html
(+877 files in other folders)
