[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trendify"
dynamic = ["version"]
description = "Tools for generating data products, storing, and interacting with them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "numpydantic>=1.10.0",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "sse-starlette>=3.4.5",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
]

keywords = [
    "Data",
    "Products",
    "Process",
    "Post",
    "Database",
    "Visualization",
    "Dashboard",
    "Plotting",
    "Trends",
    "Matplotlib",
    "Plotly",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [
    { name = "Talbot Knighton", email = "talbotknighton@gmail.com" },
    { name = "David Gable", email = "david@david-gable.com" },
]
maintainers = [
    { name = "Talbot Knighton", email = "talbotknighton@gmail.com" },
    { name = "David Gable", email = "david@david-gable.com" },
]
license = { text = "MIT" }

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/trendify"]
exclude = ["src/trendify/viewer/templates/static/ts/**"]

[tool.ruff]
exclude = ["typings"]


[tool.ruff.lint]
select = ["D", "RUF", "E", "F", "W", "UP"] # some suggest using "ALL"

ignore = [
    # modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    # specific rules
    # "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D404",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]

[tool.pyright]
stubPath = "typings"
venvPath = "."
venv = ".venv"
ignore = ["typings"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "@(abc\\.)?abstractmethod"]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mkinit>=1.2.0",
    "pytest>=9.1.1",
    "snakeviz>=2.2.2",
    "griffe-pydantic>=1.2.0",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=1.0.2",
    "pyright[nodejs]>=1.1.411",
    "ruff>=0.15.17",
    "tabulate>=0.9.0",
    "watchfiles>=1.1.1",
    "zensical>=0.0.36",
    "genbadge[coverage]>=1.1.3",
    "pytest-cov>=7.1.0",
]

[project.urls]
"Homepage" = "https://github.com/talbotknighton/trendify"
"Documentation" = "https://talbotknighton.github.io/trendify/"
"Repository" = "https://github.com/talbotknighton/trendify"
"Issues" = "https://github.com/talbotknighton/trendify/issues"
"PyPI" = "https://pypi.org/project/trendify/"

[project.scripts]
trendify = "trendify.cli:app"
